Added archer and wizard to test, also added a new page for class selection.

--- a/TheCursedReturn/TCR_TEST/inicio.html
+++ b/TheCursedReturn/TCR_TEST/inicio.html
@@ -16,7 +16,7 @@
     </div>
     <nav>
         <div class="buttons">
-        <button id="button" onclick="location.href='interfaz.html'">START</button>
+        <button id="button" onclick="location.href='clases.html'">START</button>
         <button id="button" onclick="location.href='interfaz.html'">RESUME</button>
         <button id="button" onclick="location.href='creditos.html'">CREDITS</button>
     </div>
