--- a/TheCursedReturn/TCR_TEST/clases.html
+++ b/TheCursedReturn/TCR_TEST/clases.html
@@ -26,7 +26,7 @@
     <script>
         function selectClass(playerClass) {
             localStorage.setItem("selectedClass", playerClass);
-            window.location.href = "index.html"; // Redirect to the game
+            window.location.href = "interfaz.html"; // Redirect to the game
         }
     </script>
 </body>
