Added settings and credits css

--- a/TheCursedReturn/TCR_TEST/creditos.html
+++ b/TheCursedReturn/TCR_TEST/creditos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="gridTareas.css"> -->
+    <link rel="stylesheet" href="creditos.css"> 
     <title>creditos</title>
 </head>
 
@@ -12,6 +12,7 @@
         <h1>Créditos</h1>
     </header>
     <div class="grid-container">
+        <div class="column1">
         <div class="g-item" id="g-item1">
             <h2>Desarrolladores</h2>
             <ul>
@@ -30,6 +31,9 @@
         <div class="g-item" id="g-item3">
             <h2>Sprites</h2>
         </div>
+        </div>
+
+        <div class="column2">
         <div class="g-item" id="g-item4">
             <h2>Otras referencias</h2>
         </div>
@@ -38,6 +42,7 @@
                 "The Cursed Return" y todos los contenidos relacionados, incluyendo pero no limitado a: diseño del juego, personajes, historia, arte, música, código fuente y documentación, son propiedad intelectual de Infinite Horizon Studios.
                 
                 Queda estrictamente prohibida la reproducción, distribución, modificación o uso no autorizado de cualquier parte de este documento o del juego sin el consentimiento previo por escrito de Infinite Horizon Studios.</p>
+        </div>
         </div>
     </div>
 
