Agregue la aleatoriedad de los niveles e hice un merge con las clases que hizo Luis Emilio

--- a/TheCursedReturn/TCR_TEST/audio.html
+++ b/TheCursedReturn/TCR_TEST/audio.html
@@ -107,7 +107,7 @@ Estado: ${music.paused ? 'Pausado' : 'Reproduciendo'}
         </script>
         <footer>
             <div class="button-container centered">
-                <a href="interfaz.html">
+                <a href="Interfaz.html">
                     <button id="backButton">Regresar</button>
                 </a>
             </div>
