--- a/TheCursedReturn/TCR_TEST/audio.html
+++ b/TheCursedReturn/TCR_TEST/audio.html
@@ -113,7 +113,7 @@ Estado: ${music.paused ? 'Pausado' : 'Reproduciendo'}
             <div class="button-container-centered">
                 <a href="interfaz.html"></a>
             </div>
-            <div class="button-container centered">
+            <div class="button_container_centered">
                 <a href="Interfaz.html">
                     <button id="backButton">Regresar</button>
                 </a>
