--- a/TheCursedReturn/TCR_TEST/clases.html
+++ b/TheCursedReturn/TCR_TEST/clases.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="clases.css">
     <title>Choose Your Class</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-        }
-        .class-button {
-            font-size: 20px;
-            padding: 10px 20px;
-            margin: 10px;
-            cursor: pointer;
-        }
-    </style>
 </head>
+
 <body>
-    <h1>Choose Your Class</h1>
-    <button class="class-button" onclick="selectClass('knight')">Knight</button>
-    <button class="class-button" onclick="selectClass('archer')">Archer</button>
-    <button class="class-button" onclick="selectClass('wizard')">Wizard</button>
+    <header>
+        <h1>Choose Your Class</h1>
+    </header>
+
+    <div class="classes_section">
+        <div class="Knight">
+            <img src="../images/classes/class_knight.png" class="class_image" height="400px">
+            <img src="../images/classes/knight_hover.png" class="class_hover" height="400px">
+            <button class="class-button" onclick="selectClass('knight')">Knight</button>
+        </div>
+
+        <div class="Archer">
+            <img src="../images/classes/class_archer.png" class="class_image" height="400px">
+            <img src="../images/classes/archer_hover.png" class="class_hover" height="400px">
+            <button class="class-button" onclick="selectClass('archer')">Archer</button>
+        </div>
+
+        <div class="Wizard">
+            <img src="../images/classes/class_wizard.png" class="class_image" height="400px">
+            <img src="../images/classes/wizard_hover.png" class="class_hover" height="400px">
+            <button class="class-button" onclick="selectClass('wizard')">Wizard</button>
+        </div>
+    </div>
 
     <script>
         function selectClass(playerClass) {
@@ -30,4 +40,5 @@
         }
     </script>
 </body>
+
 </html>
