--- a/TheCursedReturn/TCR_TEST/interfaz.html
+++ b/TheCursedReturn/TCR_TEST/interfaz.html
@@ -5,11 +5,12 @@
         <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title>The Cursed Return</title>
-        <link rel ="stylesheet" href="style.css" />
+        <link rel ="stylesheet" href="interfaz.css" />
         
     </head>
     <body>
-        <canvas id="canvas1"></canvas>
+        <canvas id="canvas1" height="100vh"></canvas>
+        <footer>
         <nav>
             <div id="controls">
                 <a href="audio.html">
@@ -23,7 +24,6 @@
                 </a>
             </div>
         </nav>        
-        <footer>
             <p>© 2025 The Cursed Return, Infinite Horizon Studios</p>
         </footer>
         <script src="script.js"></script>
