Added pause screen in JS, curse bar and gameover state

--- a/TheCursedReturn/TCR_TEST/audio.html
+++ b/TheCursedReturn/TCR_TEST/audio.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-        <h1>Configuración de Audio</h1>
+        <h1>Configuración de audio</h1>
         </header>
 
         <div class="settings">
