--- a/TheCursedReturn/TCR_TEST/interfaz.html
+++ b/TheCursedReturn/TCR_TEST/interfaz.html
@@ -10,22 +10,15 @@
     </head>
     <body>
         <canvas id="canvas1" height="100vh"></canvas>
-        <footer>
-        <nav>
-            <div id="controls">
-                <a href="audio.html">
-                    <button id="backButton">Sonido</button>
-                </a>
-                <a href="estadisticas.html">
-                    <button id="backButton">Estadísticas</button>
-                </a>
-                <a href="inicio.html">
-                    <button id="backButton">Guardar y salir</button>
-                </a>
-            </div>
-        </nav>        
+        <footer>      
             <p>© 2025 The Cursed Return, Infinite Horizon Studios</p>
         </footer>
+        <script src="./game_clases.js"></script>
         <script src="script.js"></script>
+        <script src="./pause/pause.js"></script>
+        <script src="audio.js"></script>
+        <script src="./pause/save_exit.js"></script>
+        <script src="./pause/stats.js"></script>
+        <script src="./pause/sonido.js"></script>
     </body>
 </html>
