Added life bar and fixed Gameover detail

--- a/TheCursedReturn/TCR_ALPHA/html/audio.html
+++ b/TheCursedReturn/TCR_ALPHA/html/audio.html
@@ -115,7 +115,7 @@ Estado: ${music.paused ? 'Pausado' : 'Reproduciendo'}
             </div>
             <div class="button_container_centered">
                 <a href="../html/interfaz.html">
-                    <button id="backButton">Regresar</button>
+                    <button id="backButton">Menú Principal</button>
                 </a>
             </div>
         </footer>
