Fixed controls details

--- a/TheCursedReturn/TCR_ALPHA/html/inicio.html
+++ b/TheCursedReturn/TCR_ALPHA/html/inicio.html
@@ -17,7 +17,7 @@
     </div>
     <nav>
         <div class="buttons">
-            <button id="button" onclick="openLogin()">Login</button>
+            <!-- <button id="button" onclick="openLogin()">Login</button>
             <div class="login">
                 <form id="login">
                     <input type="text" name="userID" placeholder="Type your user id">
@@ -25,7 +25,7 @@
                     <input type="submit" value="Login">
                     <button id="button" onclick="closeLogin()">Close</button>
                 </form>
-            </div>
+            </div> -->
             <button id="button" onclick="location.href='../html/clases.html'">START</button>
             <button id="button" onclick="location.href='../html/interfaz.html'">RESUME</button>
             <button id="button" onclick="location.href='../html/creditos.html'">CREDITS</button>
@@ -35,7 +35,7 @@
         <p>© 2025 The Cursed Return, Infinite Horizon Studios</p>
     </footer>
 
-    <script>
+    <!-- <script>
         let login = document.getElementById("login");
 
         function openLogin() {
@@ -44,7 +44,7 @@
         function closeLogin() {
             login.classList.remove("open_login");
         }
-    </script>
+    </script> -->
 
 </body>
 
