Changed html files

--- a/TheCursedReturn/TCR_ALPHA/html/clases.html
+++ b/TheCursedReturn/TCR_ALPHA/html/clases.html
@@ -10,26 +10,26 @@
 
 <body>
     <header>
-        <h1>Choose Your Class</h1>
+        <h1>Elige tu clase</h1>
     </header>
 
     <div class="classes_section">
         <div class="Knight">
             <img src="../images/classes/class_knight.png" class="class_image" height="400px">
             <img src="../images/classes/knight_hover.png" class="class_hover" height="400px">
-            <button class="class-button" onclick="selectClass('knight')">Knight</button>
+            <button class="class-button" onclick="selectClass('knight')">Caballero</button>
         </div>
 
         <div class="Archer">
             <img src="../images/classes/class_archer.png" class="class_image" height="400px">
             <img src="../images/classes/archer_hover.png" class="class_hover" height="400px">
-            <button class="class-button" onclick="selectClass('archer')">Archer</button>
+            <button class="class-button" onclick="selectClass('archer')">Arquero</button>
         </div>
 
         <div class="Wizard">
             <img src="../images/classes/class_wizard.png" class="class_image" height="400px">
             <img src="../images/classes/wizard_hover.png" class="class_hover" height="400px">
-            <button class="class-button" onclick="selectClass('wizard')">Wizard</button>
+            <button class="class-button" onclick="selectClass('wizard')">Hechicero</button>
         </div>
     </div>
 
