--- a/TheCursedReturn/TCR_ALPHA/html/interfaz.html
+++ b/TheCursedReturn/TCR_ALPHA/html/interfaz.html
@@ -35,6 +35,7 @@
             <script src="../js/curse.js"></script>  
             <script src="../js/player.js"></script>
             <script src="../js/enemy.js"></script>
+            <script src="../js/healer.js"></script>
             <script src="../js/portal.js"></script>
             <script src="../js/map_manager.js"></script>
             <script src="../js/input_manager.js"></script>
