--- a/TheCursedReturn/TCR_ALPHA/html/interfaz.html
+++ b/TheCursedReturn/TCR_ALPHA/html/interfaz.html
@@ -33,6 +33,8 @@
             <script src="../js/collision_map.js"></script>
             <script src="../js/game_classes.js"></script>
             <script src="../js/healer.js"></script>
+            <script src="../js/gunsmith.js"></script>
+            <script src="../js/chest.js"></script>
             <script src="../js/curse.js"></script>  
             <script src="../js/player.js"></script>
             <script src="../js/enemy.js"></script>
