Added login button to the main page and sign image for later

--- a/TheCursedReturn/TCR_ALPHA/html/inicio.html
+++ b/TheCursedReturn/TCR_ALPHA/html/inicio.html
@@ -17,7 +17,7 @@
     </div>
     <nav>
         <div class="buttons">
-            <!-- <button id="login_button" onclick="openLogin()">Login</button>
+            <button id="login_button" onclick="openLogin()">Login</button>
             <div class="login">
     
                 <form id="login">
@@ -27,7 +27,7 @@
                     <input id="submit" type="submit" value="Login">
                     <button type="button" id="close_button" onclick="closeLogin()">Close</button>
                 </form>
-            </div> -->
+            </div>
             <button id="button" onclick="location.href='../html/clases.html'">NUEVA PARTIDA</button>
             <button id="button" onclick="location.href='../html/interfaz.html'">RESUMIR PARTIDA</button>
             <button id="button" onclick="location.href='../html/creditos.html'">CREDITOS</button>
