Made login functional so that information is saved in the database

--- a/TheCursedReturn/TCR_ALPHA/html/api.html
+++ b/TheCursedReturn/TCR_ALPHA/html/api.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>TCR</h1>
     <div class="section">
         <div class="formInput">
             <h1>Show users</h1>
