--- a/TheCursedReturn/TCR_ALPHA/html/inicio.html
+++ b/TheCursedReturn/TCR_ALPHA/html/inicio.html
@@ -18,7 +18,7 @@
     </div>
     <nav>
         <div class="buttons">
-            <button id="login_button" onclick="openLogin()">Iniciar</button>
+            <button id="login_button" onclick="openLogin()">INICIAR</button>
             <div class="login">
 
                 <form id="login">
@@ -44,6 +44,7 @@
                     </div>
                 </form>
             </div>
+            <button id="button" onclick="location.href='../html/stats.html'">ESTADISTICAS</button>
             <button id="button" onclick="location.href='../html/creditos.html'">CREDITOS</button>
         </div>
     </nav>
