Added user form to stats.html

--- a/TheCursedReturn/TCR_ALPHA/html/stats.html
+++ b/TheCursedReturn/TCR_ALPHA/html/stats.html
@@ -16,6 +16,23 @@
         </div>
     </div>
 
+    <div class="section">
+        <div class="formInput">
+            <h1>Mostrar Usuario</h1>
+            <form id="formSelectUser">
+                <input id="input_user" type="text" name="userID" placeholder="Ingresa el nombre de usuario">
+
+                <input id="button" type="submit" value="Mostrar al usuario">
+            </form>
+        </div>
+        <div class="resultDisplay">
+            <h1>Resultado</h1>
+            <p>When the request ends, the result will be displayed here.</p>
+            <div id="getResultsID"></div>
+        </div>
+    </div>
+
+
     <script src="../js/stats.js"></script>
 </body>
 </html>
