Added main files for API (DO NOT MERGE YET)

--- a/TheCursedReturn/TCR_ALPHA/html/clases.html
+++ b/TheCursedReturn/TCR_ALPHA/html/clases.html
@@ -36,9 +36,12 @@
     <script>
         function selectClass(playerClass) {
             localStorage.setItem("selectedClass", playerClass);
-            window.location.href = "../html/interfaz.html"; // Redirect to the game
+            window.location.href = "../html/interfaz.html";
         }
     </script>
+    <script src="../js/constants.js"></script>
+    <script src="../js/api.js"></script>
+    <script src="../js/input_manager.js"></script>
 </body>
 
 </html>
