--- a/TheCursedReturn/TCR_ALPHA/html/interfaz.html
+++ b/TheCursedReturn/TCR_ALPHA/html/interfaz.html
@@ -15,6 +15,7 @@
     <footer>
         <p>© 2025 The Cursed Return, Infinite Horizon Studios</p>
     </footer>
+            <script src="../js/constants.js"></script>
             <script src="../collisions/WoodsLVL1.js"></script>
             <script src="../collisions/WoodsLVL2.js"></script>
             <script src="../collisions/WoodsLVL3.js"></script>
