--- a/TheCursedReturn/TCR_ALPHA/html/stats.html
+++ b/TheCursedReturn/TCR_ALPHA/html/stats.html
@@ -32,7 +32,8 @@
         </div>
     </div>
 
-
+    <script src="../js/constants.js"></script>
+    <script src="../js/api.js"></script>
     <script src="../js/stats.js"></script>
 </body>
 </html>
