Added graphs and user search in stats.html, also icluded sound functionality in the game

--- a/TheCursedReturn/TCR_ALPHA/html/interfaz.html
+++ b/TheCursedReturn/TCR_ALPHA/html/interfaz.html
@@ -42,6 +42,7 @@
             <script src="../js/map_manager.js"></script>
             <script src="../js/input_manager.js"></script>
             <script src="../js/gameover.js"></script>
+            <script src="../js/sound.js"></script>
             <script src="../js/game.js"></script>
             <script src="../js/tcr.js"></script>
 
