Added data for statistics page in pause menu

--- a/TheCursedReturn/TCR_ALPHA/html/interfaz.html
+++ b/TheCursedReturn/TCR_ALPHA/html/interfaz.html
@@ -50,6 +50,6 @@
             <script src="../js/pause/pause.js"></script>
             <script src="../js/pause/save_exit.js"></script>
             <script src="../js/pause/sonido.js"></script>
-            <script src="../js/pause/stats.js"></script>
+            <script src="../js/pause/stats_pause.js"></script>
     </body>
 </html>
