Minor fix to stats.js call

--- a/TheCursedReturn/TCR_ALPHA/html/stats.html
+++ b/TheCursedReturn/TCR_ALPHA/html/stats.html
@@ -54,6 +54,6 @@
 
     <script src="../js/constants.js"></script>
     <script src="../js/api.js"></script>
-    <script src="../js/stats_pause.js"></script>
+    <script src="../js/stats.js"></script>
 </body>
 </html>
