Fixed story context

--- a/TheCursedReturn/TCR_ALPHA/html/clases.html
+++ b/TheCursedReturn/TCR_ALPHA/html/clases.html
@@ -36,7 +36,7 @@
     <script>
         function selectClass(playerClass) {
             localStorage.setItem("selectedClass", playerClass);
-            window.location.href = "../html/interfaz.html";
+            window.location.href = "../html/story.html";
         }
     </script>
     <script src="../js/constants.js"></script>
