--- a/TheCursedReturn/TCR_ALPHA/html/creditos.html
+++ b/TheCursedReturn/TCR_ALPHA/html/creditos.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="../css/creditos.css"> 
+    <link rel="stylesheet" href="../css/creditos.css">
     <title>creditos</title>
 </head>
 
@@ -13,36 +14,55 @@
     </header>
     <div class="grid-container">
         <div class="column1">
-        <div class="g-item" id="g-item1">
-            <h2>Desarrolladores</h2>
-            <ul>
-                <li>Valentina Castilla | A01028209</li>
-                <li>Diego de la Vega Saishio | A01420632</li>
-                <li>Luis Emilio Veledíaz | A01029829</li>
-            </ul>
-        </div>
-        <div class="g-item" id="g-item2">
-            <h2>Música</h2>
-            <ol>
-                <li><a href="https://freesound.org/people/ShannonAHoniball/sounds/363023/">Sword Yielding</a> by <a href="https://freesound.org/people/ShannonAHoniball/">ShannonAHoniball</a> | License: <a href="http://creativecommons.org/licenses/by-nc/3.0/">Attribution NonCommercial 3.0</a></li>
-                <li><a href="https://freesound.org/people/OGsoundFX/sounds/423119/">Medieval City - SAMPLE.wav</a> by <a href="https://freesound.org/people/OGsoundFX/">OGsoundFX</a> | License: <a href="https://creativecommons.org/licenses/by/4.0/">Attribution 4.0</a></li>
-            </ol>
-        </div>
-        <div class="g-item" id="g-item3">
-            <h2>Sprites</h2>
-        </div>
+            <div class="g-item" id="g-item1">
+                <h2>Desarrolladores</h2>
+                <ul>
+                    <li>Valentina Castilla | A01028209</li>
+                    <li>Diego de la Vega Saishio | A01420632</li>
+                    <li>Luis Emilio Veledíaz | A01029829</li>
+                </ul>
+            </div>
+            <div class="g-item" id="g-item2">
+                <h2>Música</h2>
+                <div class="sound_effects">
+                    <ol>
+                        <li>Brawl Stars - Sound Effects. (2021, 1 julio). Heal sound effect [Vídeo]. YouTube. <a
+                                href="https://www.youtube.com/watch?v=uNe6KXJqf48">https://www.youtube.com/watch?v=uNe6KXJqf48</a>
+                        </li>
+                        <li>TenAthlete Minecraft. (2023, 21 marzo). Minecraft villager sound effect [Vídeo]. YouTube. <a
+                            href="https://www.youtube.com/watch?v=fiwRZ_j61Dc">https://www.youtube.com/watch?v=fiwRZ_j61Dc</a>
+                        </li>
+                        <li>BATMARIO. (2023, 15 agosto). Sound Effect - Fortnite Chest Opening [Vídeo]. YouTube. <a
+                            href="https://www.youtube.com/watch?v=-whYIavLM1s">hhttps://www.youtube.com/watch?v=-whYIavLM1s</a>
+                        </li>
+                        <li>sndfcx. (2020, 8 agosto). Minecraft Hit - Sound Effect (HD) [Vídeo]. YouTube. <a
+                            href="https://www.youtube.com/watch?v=19mr-rHALN8">https://www.youtube.com/watch?v=19mr-rHALN8</a>
+                        </li>
+                        <li>Context luck. (2022, 18 febrero). roblox sword noise [Vídeo]. YouTube. <a
+                            href="https://www.youtube.com/watch?v=XBtjOSS2byw">https://www.youtube.com/watch?v=XBtjOSS2byw</a>
+                        </li>
+                    </ol>
+                </div>
+            </div>
         </div>
 
         <div class="column2">
-        <div class="g-item" id="g-item4">
-            <h2>Otras referencias</h2>
-        </div>
-        <div class="g-item" id="g-item5">
-            <p>© 2025 Infinite Horizon Studios. Todos los derechos reservados.
-                "The Cursed Return" y todos los contenidos relacionados, incluyendo pero no limitado a: diseño del juego, personajes, historia, arte, música, código fuente y documentación, son propiedad intelectual de Infinite Horizon Studios.
-                
-                Queda estrictamente prohibida la reproducción, distribución, modificación o uso no autorizado de cualquier parte de este documento o del juego sin el consentimiento previo por escrito de Infinite Horizon Studios.</p>
-        </div>
+            <div class="g-item" id="g-item3">
+                <h2>Sprites</h2>
+            </div>
+            <div class="g-item" id="g-item4">
+                <h2>Otras referencias</h2>
+            </div>
+            <div class="g-item" id="g-item5">
+                <p>© 2025 Infinite Horizon Studios. Todos los derechos reservados.
+                    "The Cursed Return" y todos los contenidos relacionados, incluyendo pero no limitado a: diseño del
+                    juego, personajes, historia, arte, música, código fuente y documentación, son propiedad intelectual
+                    de Infinite Horizon Studios.
+
+                    Queda estrictamente prohibida la reproducción, distribución, modificación o uso no autorizado de
+                    cualquier parte de este documento o del juego sin el consentimiento previo por escrito de Infinite
+                    Horizon Studios.</p>
+            </div>
         </div>
     </div>
 
@@ -52,4 +72,3 @@
         </a>
     </footer>
 </body>
-
