Added sprites credits in 'creditos'

--- a/TheCursedReturn/TCR_ALPHA/html/creditos.html
+++ b/TheCursedReturn/TCR_ALPHA/html/creditos.html
@@ -49,6 +49,19 @@
         <div class="column2">
             <div class="g-item" id="g-item3">
                 <h2>Sprites</h2>
+                <ol>
+                    <li> 
+                        Sprites utilizados del Universal LPC Spritesheet Character Generator, basado en múltiples contribuciones de la comunidad de OpenGameArt.org.
+                        <div>
+                        Licencias: OGA-BY 3.0, CC-BY-SA 3.0 y GPL 3.0.   
+                        </div>
+                        <div>
+                            Más información y assets relacionados:
+                            https://opengameart.org/content/lpc-character-bases
+                            https://opengameart.org/content/liberated-pixel-cup-lpc-base-assets-sprites-map-tiles
+                        </div>
+                    </li>
+                </ol>
             </div>
             <div class="g-item" id="g-item4">
                 <h2>Otras referencias</h2>
