Changes some queries for graphs statistics

--- a/TheCursedReturn/TCR_ALPHA/html/stats.html
+++ b/TheCursedReturn/TCR_ALPHA/html/stats.html
@@ -27,7 +27,7 @@
             </form>
         </div>
         <div class="resultDisplay">
-            <h1>Resultado</h1>
+            <h1>Últimas 10 partidas del jugador</h1>
             <div id="userStatsResults">
                 <p>Ingresa un nombre de usuario para ver sus estadísticas</p>
             </div>
