Fixed api structure in right folder and deleted some extra files

--- a/TheCursedReturn/TCR_ALPHA/html/clases.html
+++ b/TheCursedReturn/TCR_ALPHA/html/clases.html
@@ -40,7 +40,7 @@
         }
     </script>
     <script src="../js/constants.js"></script>
-    <script src="../js/api.js"></script>
+    <script src="../api/api.js"></script>
     <script src="../js/input_manager.js"></script>
 </body>
 
