--- a/TheCursedReturn/TCR_ALPHA/html/stats.html
+++ b/TheCursedReturn/TCR_ALPHA/html/stats.html
@@ -53,7 +53,7 @@
     </div>
 
     <script src="../js/constants.js"></script>
-    <script src="../js/api.js"></script>
+    <script src="../api/api.js"></script>
     <script src="../js/stats.js"></script>
 </body>
 </html>
