--- a/TheCursedReturn/TCR_ALPHA/html/inicio.html
+++ b/TheCursedReturn/TCR_ALPHA/html/inicio.html
@@ -78,7 +78,7 @@
 
     </script>
     <script src="../js/constants.js"></script>
-    <script src="../js/api.js"></script>
+    <script src="../api/api.js"></script>
 
 </body>
 
